parser.output
   0  $accept : %entry% $end

   1  program : optional_declaration_list T_eof

   2  optional_declaration_list :
   3                            | optional_declaration_list declaration

   4  declaration : variable_declaration
   5              | function_declaration
   6              | function_definition

   7  inside_brackets : optional_declaration_list optional_statement_list

   8  declarator : T_id
   9             | T_id T_lbracket constant_expression T_rbracket

  10  declarator_list : declarator
  11                  | declarator T_comma declarator_list

  12  variable_declaration : ttype declarator_list T_semicol

  13  ttype : basic_type optional_T_times_list

  14  optional_T_times_list :
  15                        | optional_T_times_list T_times

  16  basic_type : T_int
  17             | T_char
  18             | T_bool
  19             | T_double

  20  function_definition : ttype T_id T_lparen optional_parameter_list T_rparen T_lcurl inside_brackets T_rcurl
  21                      | T_void T_id T_lparen optional_parameter_list T_rparen T_lcurl inside_brackets T_rcurl

  22  function_declaration : ttype T_id T_lparen optional_parameter_list T_rparen T_semicol
  23                       | T_void T_id T_lparen optional_parameter_list T_rparen T_semicol

  24  parameter_list : parameter
  25                 | parameter_list T_comma parameter

  26  optional_parameter_list :
  27                          | parameter_list

  28  parameter : ttype T_id
  29            | T_byref ttype T_id

  30  optional_expression :
  31                      | expression

  32  expression_list : expression
  33                  | expression_list T_comma expression

  34  statement_list : statement
  35                 | statement_list statement

  36  optional_statement_list :
  37                          | statement_list

  38  optional_for_label :
  39                     | T_id T_colon

  40  optional_label_semi : T_semicol
  41                      | T_id T_semicol

  42  statement : matched_if
  43            | unmatched_if

  44  matched_if : T_if T_lparen expression T_rparen matched_if T_else matched_if
  45             | T_semicol
  46             | expression T_semicol
  47             | T_lcurl optional_statement_list T_rcurl
  48             | optional_for_label T_for T_lparen optional_expression T_semicol optional_expression T_semicol optional_expression T_rparen statement
  49             | T_continue optional_label_semi
  50             | T_break optional_label_semi
  51             | T_return optional_expression T_semicol

  52  unmatched_if : T_if T_lparen expression T_rparen statement
  53               | T_if T_lparen expression T_rparen matched_if T_else unmatched_if

  54  expression : T_id
  55             | T_lparen after_lparen
  56             | T_true
  57             | T_false
  58             | T_NULL
  59             | T_intconst
  60             | T_charconst
  61             | T_doubleconst
  62             | T_stringliteral
  63             | T_id T_lparen T_rparen
  64             | T_id T_lparen expression_list T_rparen
  65             | expression T_lbracket expression T_rbracket
  66             | unary_expression
  67             | binary_expression
  68             | unary_assignment
  69             | binary_assignment
  70             | T_lparen ttype T_rparen expression
  71             | expression T_q expression T_colon expression
  72             | T_new ttype optional_new
  73             | T_delete expression

  74  after_lparen : expression T_rparen
  75               | ttype T_rparen

  76  unary_expression : T_bitand expression
  77                   | T_times expression
  78                   | T_plus expression
  79                   | T_minus expression
  80                   | T_bitnot expression

  81  binary_expression : expression T_times expression
  82                    | expression T_div expression
  83                    | expression T_mod expression
  84                    | expression T_plus expression
  85                    | expression T_minus expression
  86                    | expression T_lt expression
  87                    | expression T_gt expression
  88                    | expression T_le expression
  89                    | expression T_ge expression
  90                    | expression T_eq expression
  91                    | expression T_neq expression
  92                    | expression T_and expression
  93                    | expression T_or expression
  94                    | expression T_comma expression

  95  unary_assignment : T_plusplus expression
  96                   | T_minusminus expression
  97                   | expression T_plusplus
  98                   | expression T_minusminus

  99  binary_assignment : expression T_assign expression
 100                    | expression T_timeseq expression
 101                    | expression T_diveq expression
 102                    | expression T_modeq expression
 103                    | expression T_pluseq expression
 104                    | expression T_minuseq expression

 105  optional_new :
 106               | T_lbracket expression T_rbracket

 107  constant_expression : expression

 108  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (108)
	optional_declaration_list : .  (2)

	.  reduce 2

	program  goto 3
	optional_declaration_list  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (108)

	.  reduce 108


state 4
	program : optional_declaration_list . T_eof  (1)
	optional_declaration_list : optional_declaration_list . declaration  (3)

	T_bool  shift 5
	T_char  shift 6
	T_double  shift 7
	T_int  shift 8
	T_void  shift 9
	T_eof  shift 10
	.  error

	declaration  goto 11
	variable_declaration  goto 12
	function_declaration  goto 13
	function_definition  goto 14
	ttype  goto 15
	basic_type  goto 16


state 5
	basic_type : T_bool .  (18)

	.  reduce 18


state 6
	basic_type : T_char .  (17)

	.  reduce 17


state 7
	basic_type : T_double .  (19)

	.  reduce 19


state 8
	basic_type : T_int .  (16)

	.  reduce 16


state 9
	function_definition : T_void . T_id T_lparen optional_parameter_list T_rparen T_lcurl inside_brackets T_rcurl  (21)
	function_declaration : T_void . T_id T_lparen optional_parameter_list T_rparen T_semicol  (23)

	T_id  shift 17
	.  error


state 10
	program : optional_declaration_list T_eof .  (1)

	.  reduce 1


state 11
	optional_declaration_list : optional_declaration_list declaration .  (3)

	.  reduce 3


state 12
	declaration : variable_declaration .  (4)

	.  reduce 4


state 13
	declaration : function_declaration .  (5)

	.  reduce 5


state 14
	declaration : function_definition .  (6)

	.  reduce 6


state 15
	variable_declaration : ttype . declarator_list T_semicol  (12)
	function_definition : ttype . T_id T_lparen optional_parameter_list T_rparen T_lcurl inside_brackets T_rcurl  (20)
	function_declaration : ttype . T_id T_lparen optional_parameter_list T_rparen T_semicol  (22)

	T_id  shift 18
	.  error

	declarator  goto 19
	declarator_list  goto 20


state 16
	ttype : basic_type . optional_T_times_list  (13)
	optional_T_times_list : .  (14)

	.  reduce 14

	optional_T_times_list  goto 21


state 17
	function_definition : T_void T_id . T_lparen optional_parameter_list T_rparen T_lcurl inside_brackets T_rcurl  (21)
	function_declaration : T_void T_id . T_lparen optional_parameter_list T_rparen T_semicol  (23)

	T_lparen  shift 22
	.  error


state 18
	declarator : T_id .  (8)
	declarator : T_id . T_lbracket constant_expression T_rbracket  (9)
	function_definition : ttype T_id . T_lparen optional_parameter_list T_rparen T_lcurl inside_brackets T_rcurl  (20)
	function_declaration : ttype T_id . T_lparen optional_parameter_list T_rparen T_semicol  (22)

	T_lparen  shift 23
	T_lbracket  shift 24
	T_comma  reduce 8
	T_semicol  reduce 8


state 19
	declarator_list : declarator .  (10)
	declarator_list : declarator . T_comma declarator_list  (11)

	T_comma  shift 25
	T_semicol  reduce 10


state 20
	variable_declaration : ttype declarator_list . T_semicol  (12)

	T_semicol  shift 26
	.  error


state 21
	ttype : basic_type optional_T_times_list .  (13)
	optional_T_times_list : optional_T_times_list . T_times  (15)

	T_times  shift 27
	T_id  reduce 13
	T_assign  reduce 13
	T_eq  reduce 13
	T_neq  reduce 13
	T_gt  reduce 13
	T_lt  reduce 13
	T_ge  reduce 13
	T_le  reduce 13
	T_plus  reduce 13
	T_minus  reduce 13
	T_div  reduce 13
	T_mod  reduce 13
	T_and  reduce 13
	T_or  reduce 13
	T_q  reduce 13
	T_colon  reduce 13
	T_comma  reduce 13
	T_plusplus  reduce 13
	T_minusminus  reduce 13
	T_pluseq  reduce 13
	T_minuseq  reduce 13
	T_timeseq  reduce 13
	T_diveq  reduce 13
	T_modeq  reduce 13
	T_semicol  reduce 13
	T_rparen  reduce 13
	T_lbracket  reduce 13
	T_rbracket  reduce 13


state 22
	function_definition : T_void T_id T_lparen . optional_parameter_list T_rparen T_lcurl inside_brackets T_rcurl  (21)
	function_declaration : T_void T_id T_lparen . optional_parameter_list T_rparen T_semicol  (23)
	optional_parameter_list : .  (26)

	T_bool  shift 5
	T_byref  shift 28
	T_char  shift 6
	T_double  shift 7
	T_int  shift 8
	T_rparen  reduce 26

	ttype  goto 29
	basic_type  goto 16
	optional_parameter_list  goto 30
	parameter_list  goto 31
	parameter  goto 32


state 23
	function_definition : ttype T_id T_lparen . optional_parameter_list T_rparen T_lcurl inside_brackets T_rcurl  (20)
	function_declaration : ttype T_id T_lparen . optional_parameter_list T_rparen T_semicol  (22)
	optional_parameter_list : .  (26)

	T_bool  shift 5
	T_byref  shift 28
	T_char  shift 6
	T_double  shift 7
	T_int  shift 8
	T_rparen  reduce 26

	ttype  goto 29
	basic_type  goto 16
	optional_parameter_list  goto 33
	parameter_list  goto 31
	parameter  goto 32


state 24
	declarator : T_id T_lbracket . constant_expression T_rbracket  (9)

	T_delete  shift 34
	T_false  shift 35
	T_new  shift 36
	T_NULL  shift 37
	T_true  shift 38
	T_intconst  shift 39
	T_doubleconst  shift 40
	T_id  shift 41
	T_charconst  shift 42
	T_stringliteral  shift 43
	T_plus  shift 44
	T_minus  shift 45
	T_times  shift 46
	T_bitand  shift 47
	T_bitnot  shift 48
	T_plusplus  shift 49
	T_minusminus  shift 50
	T_lparen  shift 51
	.  error

	constant_expression  goto 52
	expression  goto 53
	unary_expression  goto 54
	binary_expression  goto 55
	unary_assignment  goto 56
	binary_assignment  goto 57


state 25
	declarator_list : declarator T_comma . declarator_list  (11)

	T_id  shift 58
	.  error

	declarator  goto 19
	declarator_list  goto 59


state 26
	variable_declaration : ttype declarator_list T_semicol .  (12)

	.  reduce 12


state 27
	optional_T_times_list : optional_T_times_list T_times .  (15)

	.  reduce 15


state 28
	parameter : T_byref . ttype T_id  (29)

	T_bool  shift 5
	T_char  shift 6
	T_double  shift 7
	T_int  shift 8
	.  error

	ttype  goto 60
	basic_type  goto 16


state 29
	parameter : ttype . T_id  (28)

	T_id  shift 61
	.  error


state 30
	function_definition : T_void T_id T_lparen optional_parameter_list . T_rparen T_lcurl inside_brackets T_rcurl  (21)
	function_declaration : T_void T_id T_lparen optional_parameter_list . T_rparen T_semicol  (23)

	T_rparen  shift 62
	.  error


state 31
	parameter_list : parameter_list . T_comma parameter  (25)
	optional_parameter_list : parameter_list .  (27)

	T_comma  shift 63
	T_rparen  reduce 27


state 32
	parameter_list : parameter .  (24)

	.  reduce 24


state 33
	function_definition : ttype T_id T_lparen optional_parameter_list . T_rparen T_lcurl inside_brackets T_rcurl  (20)
	function_declaration : ttype T_id T_lparen optional_parameter_list . T_rparen T_semicol  (22)

	T_rparen  shift 64
	.  error


state 34
	expression : T_delete . expression  (73)

	T_delete  shift 34
	T_false  shift 35
	T_new  shift 36
	T_NULL  shift 37
	T_true  shift 38
	T_intconst  shift 39
	T_doubleconst  shift 40
	T_id  shift 41
	T_charconst  shift 42
	T_stringliteral  shift 43
	T_plus  shift 44
	T_minus  shift 45
	T_times  shift 46
	T_bitand  shift 47
	T_bitnot  shift 48
	T_plusplus  shift 49
	T_minusminus  shift 50
	T_lparen  shift 51
	.  error

	expression  goto 65
	unary_expression  goto 54
	binary_expression  goto 55
	unary_assignment  goto 56
	binary_assignment  goto 57


state 35
	expression : T_false .  (57)

	.  reduce 57


state 36
	expression : T_new . ttype optional_new  (72)

	T_bool  shift 5
	T_char  shift 6
	T_double  shift 7
	T_int  shift 8
	.  error

	ttype  goto 66
	basic_type  goto 16


state 37
	expression : T_NULL .  (58)

	.  reduce 58


state 38
	expression : T_true .  (56)

	.  reduce 56


state 39
	expression : T_intconst .  (59)

	.  reduce 59


state 40
	expression : T_doubleconst .  (61)

	.  reduce 61


state 41
	expression : T_id .  (54)
	expression : T_id . T_lparen T_rparen  (63)
	expression : T_id . T_lparen expression_list T_rparen  (64)

	T_lparen  shift 67
	T_assign  reduce 54
	T_eq  reduce 54
	T_neq  reduce 54
	T_gt  reduce 54
	T_lt  reduce 54
	T_ge  reduce 54
	T_le  reduce 54
	T_plus  reduce 54
	T_minus  reduce 54
	T_times  reduce 54
	T_div  reduce 54
	T_mod  reduce 54
	T_and  reduce 54
	T_or  reduce 54
	T_q  reduce 54
	T_colon  reduce 54
	T_comma  reduce 54
	T_plusplus  reduce 54
	T_minusminus  reduce 54
	T_pluseq  reduce 54
	T_minuseq  reduce 54
	T_timeseq  reduce 54
	T_diveq  reduce 54
	T_modeq  reduce 54
	T_semicol  reduce 54
	T_rparen  reduce 54
	T_lbracket  reduce 54
	T_rbracket  reduce 54


state 42
	expression : T_charconst .  (60)

	.  reduce 60


state 43
	expression : T_stringliteral .  (62)

	.  reduce 62


state 44
	unary_expression : T_plus . expression  (78)

	T_delete  shift 34
	T_false  shift 35
	T_new  shift 36
	T_NULL  shift 37
	T_true  shift 38
	T_intconst  shift 39
	T_doubleconst  shift 40
	T_id  shift 41
	T_charconst  shift 42
	T_stringliteral  shift 43
	T_plus  shift 44
	T_minus  shift 45
	T_times  shift 46
	T_bitand  shift 47
	T_bitnot  shift 48
	T_plusplus  shift 49
	T_minusminus  shift 50
	T_lparen  shift 51
	.  error

	expression  goto 68
	unary_expression  goto 54
	binary_expression  goto 55
	unary_assignment  goto 56
	binary_assignment  goto 57


state 45
	unary_expression : T_minus . expression  (79)

	T_delete  shift 34
	T_false  shift 35
	T_new  shift 36
	T_NULL  shift 37
	T_true  shift 38
	T_intconst  shift 39
	T_doubleconst  shift 40
	T_id  shift 41
	T_charconst  shift 42
	T_stringliteral  shift 43
	T_plus  shift 44
	T_minus  shift 45
	T_times  shift 46
	T_bitand  shift 47
	T_bitnot  shift 48
	T_plusplus  shift 49
	T_minusminus  shift 50
	T_lparen  shift 51
	.  error

	expression  goto 69
	unary_expression  goto 54
	binary_expression  goto 55
	unary_assignment  goto 56
	binary_assignment  goto 57


state 46
	unary_expression : T_times . expression  (77)

	T_delete  shift 34
	T_false  shift 35
	T_new  shift 36
	T_NULL  shift 37
	T_true  shift 38
	T_intconst  shift 39
	T_doubleconst  shift 40
	T_id  shift 41
	T_charconst  shift 42
	T_stringliteral  shift 43
	T_plus  shift 44
	T_minus  shift 45
	T_times  shift 46
	T_bitand  shift 47
	T_bitnot  shift 48
	T_plusplus  shift 49
	T_minusminus  shift 50
	T_lparen  shift 51
	.  error

	expression  goto 70
	unary_expression  goto 54
	binary_expression  goto 55
	unary_assignment  goto 56
	binary_assignment  goto 57


state 47
	unary_expression : T_bitand . expression  (76)

	T_delete  shift 34
	T_false  shift 35
	T_new  shift 36
	T_NULL  shift 37
	T_true  shift 38
	T_intconst  shift 39
	T_doubleconst  shift 40
	T_id  shift 41
	T_charconst  shift 42
	T_stringliteral  shift 43
	T_plus  shift 44
	T_minus  shift 45
	T_times  shift 46
	T_bitand  shift 47
	T_bitnot  shift 48
	T_plusplus  shift 49
	T_minusminus  shift 50
	T_lparen  shift 51
	.  error

	expression  goto 71
	unary_expression  goto 54
	binary_expression  goto 55
	unary_assignment  goto 56
	binary_assignment  goto 57


state 48
	unary_expression : T_bitnot . expression  (80)

	T_delete  shift 34
	T_false  shift 35
	T_new  shift 36
	T_NULL  shift 37
	T_true  shift 38
	T_intconst  shift 39
	T_doubleconst  shift 40
	T_id  shift 41
	T_charconst  shift 42
	T_stringliteral  shift 43
	T_plus  shift 44
	T_minus  shift 45
	T_times  shift 46
	T_bitand  shift 47
	T_bitnot  shift 48
	T_plusplus  shift 49
	T_minusminus  shift 50
	T_lparen  shift 51
	.  error

	expression  goto 72
	unary_expression  goto 54
	binary_expression  goto 55
	unary_assignment  goto 56
	binary_assignment  goto 57


state 49
	unary_assignment : T_plusplus . expression  (95)

	T_delete  shift 34
	T_false  shift 35
	T_new  shift 36
	T_NULL  shift 37
	T_true  shift 38
	T_intconst  shift 39
	T_doubleconst  shift 40
	T_id  shift 41
	T_charconst  shift 42
	T_stringliteral  shift 43
	T_plus  shift 44
	T_minus  shift 45
	T_times  shift 46
	T_bitand  shift 47
	T_bitnot  shift 48
	T_plusplus  shift 49
	T_minusminus  shift 50
	T_lparen  shift 51
	.  error

	expression  goto 73
	unary_expression  goto 54
	binary_expression  goto 55
	unary_assignment  goto 56
	binary_assignment  goto 57


state 50
	unary_assignment : T_minusminus . expression  (96)

	T_delete  shift 34
	T_false  shift 35
	T_new  shift 36
	T_NULL  shift 37
	T_true  shift 38
	T_intconst  shift 39
	T_doubleconst  shift 40
	T_id  shift 41
	T_charconst  shift 42
	T_stringliteral  shift 43
	T_plus  shift 44
	T_minus  shift 45
	T_times  shift 46
	T_bitand  shift 47
	T_bitnot  shift 48
	T_plusplus  shift 49
	T_minusminus  shift 50
	T_lparen  shift 51
	.  error

	expression  goto 74
	unary_expression  goto 54
	binary_expression  goto 55
	unary_assignment  goto 56
	binary_assignment  goto 57


state 51
	expression : T_lparen . after_lparen  (55)
	expression : T_lparen . ttype T_rparen expression  (70)

	T_bool  shift 5
	T_char  shift 6
	T_delete  shift 34
	T_double  shift 7
	T_false  shift 35
	T_int  shift 8
	T_new  shift 36
	T_NULL  shift 37
	T_true  shift 38
	T_intconst  shift 39
	T_doubleconst  shift 40
	T_id  shift 41
	T_charconst  shift 42
	T_stringliteral  shift 43
	T_plus  shift 44
	T_minus  shift 45
	T_times  shift 46
	T_bitand  shift 47
	T_bitnot  shift 48
	T_plusplus  shift 49
	T_minusminus  shift 50
	T_lparen  shift 51
	.  error

	ttype  goto 75
	basic_type  goto 16
	expression  goto 76
	after_lparen  goto 77
	unary_expression  goto 54
	binary_expression  goto 55
	unary_assignment  goto 56
	binary_assignment  goto 57


state 52
	declarator : T_id T_lbracket constant_expression . T_rbracket  (9)

	T_rbracket  shift 78
	.  error

